# risv-v

./: CMakeLists.txt  README.md
risv-v/: CMakeLists.txt  risv-v.c  uint.h
risv-v/RVCPU/: rv_bdecode.c  rv_idecode.c  rv_jdecode.c  rv_rdecode.c  rv_sdecode.c  rvcpu.c  rvcpu.h
risv-v/RVMEM/: rvmem.c  rvmem.h  rvmem_read.c  rvmem_write.c
